# applied_complexity

./: .dockerignore  .env-sample  .gitignore  Dockerfile  Makefile  README.md  backfill.py  mc.py  pyproject.toml
indicators/: __init__.py  spx_gold_daily.py
indicators/spx_gold/: Makefile  spx_gold_daily.py
indicators/spx_gold_daily/: .dockerignore  Dockerfile  Makefile  pyproject.toml  spx_gold_daily.py
infra/: Makefile  README.md  backend.tf  bronze.tf  gold.tf  indicators.tf  ingestors.tf  landing_zone.tf  main.tf  metabase.tf  pipeline.tf  processors.tf  publishers.tf  secrets.tf  silver.tf  variables.tf
infra/modules/medallion_core/: backend.tf  main.tf
ingestors/: __init__.py  backfill_history.py  fred.py  massive.py
ingestors/fred/: Dockerfile  Makefile  main.py  pyproject.toml
ingestors/massive/: Dockerfile  Makefile  backfill_history.py  main.py  pyproject.toml
metabase/: Makefile
processors/: __init__.py  stock_features_daily.py
processors/stock_features_daily/: Dockerfile  Makefile  pyproject.toml  stock_features_daily.py
processors/stock_signals_daily/: main.py  pyproject.toml
publishers/: __init__.py  spx_gold_trend.py
publishers/spx_gold_trend/: Dockerfile  Makefile  pyproject.toml  spx_gold_trend.py
