[project]
name = "spx-gold-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gcsfs>=2026.2.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-bigquery-storage>=2.36.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
]
