[project]
name = "spx-gold-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "db-dtypes>=1.4.4",
    "gcsfs>=2026.2.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-bigquery-storage>=2.36.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
]
